Навигация секции Feature-New
Добавлены кнопки навигации по категориям секции Feature-New

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
         </div>
     </div>
 </header>
-<main class="main-container"></main>
+<main class="main-container">
+    <section class="featured">
+        <div class="categorySwitcher">
+            <a href="#" class="categorySwitcher-links">featured</a>
+            <a href="#" class="categorySwitcher-links">new</a>
+        </div>
+        <a href="#" class="exploreAll">explore all</a>
+        <div class="featured-products"></div>
+    </section>
+</main>
 </body>
 </html>
