Блок Featured-New готов
Блок свертан полностью

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <div class="header-info">
             <span class="header-info-ticket">trending</span>
             <h1 class="header-info-h1">fishnet chair</h1>
-            <p class="header-info-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black
+            <p class="header-info-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
+                matt powder-coated black
                 or highly polished chrome.</p>
             <a href="#" class="header-info-link">order us</a>
         </div>
@@ -45,7 +46,32 @@
             <a href="#" class="categorySwitcher-links">new</a>
         </div>
         <a href="#" class="exploreAll">explore all</a>
-        <div class="featured-products"></div>
+        <div class="featured-products">
+            <div class="featured-product">
+                <img class="featured-product-img" src="img/content/product-1.jpg" alt="ProductImg" width="270" height="270">
+                <a class="featured-product-a" href=""></a>
+                <span class="featured-product-span">fishnet chair</span>
+                <p class="featured-product-p">Seat and back with upholstery made of cold cure foam.</p>
+            </div>
+            <div class="featured-product">
+                <img class="featured-product-img" src="img/content/product-2.jpg" alt="ProductImg" width="270" height="270">
+                <a class="featured-product-a" href=""></a>
+                <span class="featured-product-span">fishnet chair</span>
+                <p class="featured-product-p">Seat and back with upholstery made of cold cure foam.</p>
+            </div>
+            <div class="featured-product">
+                <img class="featured-product-img" src="img/content/product-3.jpg" alt="ProductImg" width="270" height="270">
+                <a class="featured-product-a" href=""></a>
+                <span class="featured-product-span">fishnet chair</span>
+                <p class="featured-product-p">Seat and back with upholstery made of cold cure foam.</p>
+            </div>
+            <div class="featured-product">
+                <img class="featured-product-img" src="img/content/product-4.jpg" alt="ProductImg" width="270" height="270">
+                <a class="featured-product-a" href=""></a>
+                <span class="featured-product-span">fishnet chair</span>
+                <p class="featured-product-p">Seat and back with upholstery made of cold cure foam.</p>
+            </div>
+        </div>
     </section>
 </main>
 </body>
