Блок EXCLUSIVE готов
Блок полностью готов
Кнопка order us вынесена в отдельный препроцессорный файл для подключения по классу

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p class="header-info-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
                 matt powder-coated black
                 or highly polished chrome.</p>
-            <a href="#" class="header-info-link">order us</a>
+            <a href="#" class="order-btn">order us</a>
         </div>
         <div class="header-pagination">
             <a class="header-pagination-dot"></a>
@@ -71,6 +71,20 @@
                 <span class="featured-product-span">fishnet chair</span>
                 <p class="featured-product-p">Seat and back with upholstery made of cold cure foam.</p>
             </div>
+        </div>
+    </section>
+    <section class="exclusive">
+        <div class="exclusive-itm">
+            <span class="exclusive-itm-ticket">exclusive</span>
+            <span class="exclusive-itm-h">fishnet chair</span>
+            <p class="exclusive-itm-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black or highly polished chrome.</p>
+            <a href="#" class="order-btn">order us</a>
+        </div>
+        <div class="exclusive-itm">
+            <span class="exclusive-itm-ticket">exclusive</span>
+            <span class="exclusive-itm-h">fishnet chair</span>
+            <p class="exclusive-itm-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black or highly polished chrome.</p>
+            <a href="#" class="order-btn">order us</a>
         </div>
     </section>
 </main>
