Готов блок Trending

--- a/index.html
+++ b/index.html
@@ -87,6 +87,30 @@
             <a href="#" class="order-btn">order us</a>
         </div>
     </section>
+    <section class="trending">
+        <span class="trending-h">trending products</span>
+        <a href="#" class="exploreAll">explore all</a>
+        <div class="trending-container">
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending1.jpg" alt="Trending-ITM" class="trending-itm-img" width="370" height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending2.jpg" alt="Trending-ITM" class="trending-itm-img" width="370" height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending3.jpg" alt="Trending-ITM" class="trending-itm-img" width="370" height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending4.jpg" alt="Trending-ITM" class="trending-itm-img" width="370" height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending5.jpg" alt="Trending-ITM" class="trending-itm-img" width="370" height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending6.jpg" alt="Trending-ITM" class="trending-itm-img" width="370" height="370">
+            </a>
+        </div>
+    </section>
 </main>
 </body>
 </html>
