Готов блок Hot Deal

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 or highly polished chrome.</p>
             <a href="#" class="order-btn">order us</a>
         </div>
-        <div class="header-pagination">
-            <a class="header-pagination-dot"></a>
-            <a class="header-pagination-dot"></a>
-            <a class="header-pagination-dot"></a>
+        <div class="pagination">
+            <a class="pagination-dot"></a>
+            <a class="pagination-dot"></a>
+            <a class="pagination-dot"></a>
         </div>
     </div>
 </header>
@@ -109,6 +109,20 @@
             <a href="#" class="trending-itm">
                 <img src="img/content/trending6.jpg" alt="Trending-ITM" class="trending-itm-img" width="370" height="370">
             </a>
+        </div>
+    </section>
+    <section class="hotDeal">
+        <div class="hotDeal-info">
+            <span class="hotDeal-info-ticket">hot deal</span>
+            <h1 class="hotDeal-info-h1">fishnet chair</h1>
+            <p class="hotDeal-info-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
+                matt powder-coated black.</p>
+            <a href="#" class="order-btn">order us</a>
+        </div>
+        <div class="pagination">
+            <a class="pagination-dot"></a>
+            <a class="pagination-dot"></a>
+            <a class="pagination-dot"></a>
         </div>
     </section>
 </main>
