--- a/index.html
+++ b/index.html
@@ -48,25 +48,29 @@
         <a href="#" class="exploreAll">explore all</a>
         <div class="featured-products">
             <div class="featured-product">
-                <img class="featured-product-img" src="img/content/product-1.jpg" alt="ProductImg" width="270" height="270">
+                <img class="featured-product-img" src="img/content/product-1.jpg" alt="ProductImg" width="270"
+                     height="270">
                 <a class="featured-product-a" href=""></a>
                 <span class="featured-product-span">fishnet chair</span>
                 <p class="featured-product-p">Seat and back with upholstery made of cold cure foam.</p>
             </div>
             <div class="featured-product">
-                <img class="featured-product-img" src="img/content/product-2.jpg" alt="ProductImg" width="270" height="270">
+                <img class="featured-product-img" src="img/content/product-2.jpg" alt="ProductImg" width="270"
+                     height="270">
                 <a class="featured-product-a" href=""></a>
                 <span class="featured-product-span">fishnet chair</span>
                 <p class="featured-product-p">Seat and back with upholstery made of cold cure foam.</p>
             </div>
             <div class="featured-product">
-                <img class="featured-product-img" src="img/content/product-3.jpg" alt="ProductImg" width="270" height="270">
+                <img class="featured-product-img" src="img/content/product-3.jpg" alt="ProductImg" width="270"
+                     height="270">
                 <a class="featured-product-a" href=""></a>
                 <span class="featured-product-span">fishnet chair</span>
                 <p class="featured-product-p">Seat and back with upholstery made of cold cure foam.</p>
             </div>
             <div class="featured-product">
-                <img class="featured-product-img" src="img/content/product-4.jpg" alt="ProductImg" width="270" height="270">
+                <img class="featured-product-img" src="img/content/product-4.jpg" alt="ProductImg" width="270"
+                     height="270">
                 <a class="featured-product-a" href=""></a>
                 <span class="featured-product-span">fishnet chair</span>
                 <p class="featured-product-p">Seat and back with upholstery made of cold cure foam.</p>
@@ -77,13 +81,15 @@
         <div class="exclusive-itm">
             <span class="exclusive-itm-ticket">exclusive</span>
             <span class="exclusive-itm-h">fishnet chair</span>
-            <p class="exclusive-itm-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black or highly polished chrome.</p>
+            <p class="exclusive-itm-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
+                matt powder-coated black or highly polished chrome.</p>
             <a href="#" class="order-btn">order us</a>
         </div>
         <div class="exclusive-itm">
             <span class="exclusive-itm-ticket">exclusive</span>
             <span class="exclusive-itm-h">fishnet chair</span>
-            <p class="exclusive-itm-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black or highly polished chrome.</p>
+            <p class="exclusive-itm-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
+                matt powder-coated black or highly polished chrome.</p>
             <a href="#" class="order-btn">order us</a>
         </div>
     </section>
@@ -92,22 +98,28 @@
         <a href="#" class="exploreAll">explore all</a>
         <div class="trending-container">
             <a href="#" class="trending-itm">
-                <img src="img/content/trending1.jpg" alt="Trending-ITM" class="trending-itm-img" width="370" height="370">
+                <img src="img/content/trending1.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
             </a>
             <a href="#" class="trending-itm">
-                <img src="img/content/trending2.jpg" alt="Trending-ITM" class="trending-itm-img" width="370" height="370">
+                <img src="img/content/trending2.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
             </a>
             <a href="#" class="trending-itm">
-                <img src="img/content/trending3.jpg" alt="Trending-ITM" class="trending-itm-img" width="370" height="370">
+                <img src="img/content/trending3.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
             </a>
             <a href="#" class="trending-itm">
-                <img src="img/content/trending4.jpg" alt="Trending-ITM" class="trending-itm-img" width="370" height="370">
+                <img src="img/content/trending4.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
             </a>
             <a href="#" class="trending-itm">
-                <img src="img/content/trending5.jpg" alt="Trending-ITM" class="trending-itm-img" width="370" height="370">
+                <img src="img/content/trending5.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
             </a>
             <a href="#" class="trending-itm">
-                <img src="img/content/trending6.jpg" alt="Trending-ITM" class="trending-itm-img" width="370" height="370">
+                <img src="img/content/trending6.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
             </a>
         </div>
     </section>
@@ -124,6 +136,34 @@
             <a class="pagination-dot"></a>
             <a class="pagination-dot"></a>
         </div>
+    </section>
+    <section class="exclusive2">
+        <div class="exclusive-bigItm">
+            <span class="exclusive-bigItm-ticket">exclusive</span>
+            <span class="exclusive-bigItm-h">fishnet chair</span>
+            <p class="exclusive-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
+                matt.</p>
+            <a href="#" class="order-btn">order us</a>
+        </div>
+        <a href="#" class="exclusive-smallItm">
+            <img src="img/content/exclusive2_small1.jpg" alt="Product" width="270" height="270">
+        </a>
+        <a href="#" class="exclusive-smallItm">
+            <img src="img/content/exclusive2_small2.jpg" alt="Product" width="270" height="270">
+        </a>
+        <a href="#" class="exclusive-smallItm">
+            <img src="img/content/exclusive2_small3.jpg" alt="Product" width="270" height="270">
+        </a>
+        <a href="#" class="exclusive-smallItm">
+            <img src="img/content/exclusive2_small4.jpg" alt="Product" width="270" height="270">
+        </a>
+    </section>
+    <section class="mobile">
+        <span class="mobile-ticket">mobile app</span> <br>
+        <span class="mobile-h">Find. Follow. <br> Favorite.</span> <br>
+        <span class="mobile-p">Save your favorites and share your style.</span>
+        <a class="mobile-a" href="https://www.apple.com/ru/app-store/"></a>
+        <a class="mobile-a" href="https://play.google.com/store/games"></a>
     </section>
 </main>
 </body>
