--- a/index.html
+++ b/index.html
@@ -166,5 +166,39 @@
         <a class="mobile-a" href="https://play.google.com/store/games"></a>
     </section>
 </main>
+<footer class="main-footer">
+    <section class="footer-top">
+        <div class="footer-contactUs">
+            <span class="footer-contactUs-h">Contact Us</span>
+            <p class="footer-contacts">132A Bridge Road Richmond VIC Australia.</p>
+            <p class="footer-contacts">Talk to us on 1300 132 info@interior.com</p>
+        </div>
+        <div class="footer-usefulInfo">
+            <span class="footer-usefulInfo-h">Useful Information</span>
+            <a href="#" class="footer-usefulInfo-link">sales terms</a>
+            <a href="#" class="footer-usefulInfo-link">architect accounts</a>
+            <a href="#" class="footer-usefulInfo-link">customer care</a>
+            <a href="#" class="footer-usefulInfo-link">careers</a>
+            <a href="#" class="footer-usefulInfo-link">delivery</a>
+            <a href="#" class="footer-usefulInfo-link">exchanges & returns</a>
+        </div>
+        <div class="footer-touch">
+            <span class="footer-touch-h">Let’s Stay in Touch!</span>
+            <p class="footer-touch-p">Suscribe to know about our latest news, products and special offers just for suscribers.</p>
+            <input type="email" name="email" id="email" placeholder="your email address">
+            <button id="email-button"></button>
+        </div>
+    </section>
+    <section class="footer-bottom">
+        <p class="footer-copyright">&copy; Copyright - INTERIOR 2016. All Rights Reserved.</p>
+        <div class="footer-socialLinks">
+            <a href="https://www.facebook.com/" class="footer-socialLink facebook"></a>
+            <a href="https://twitter.com/" class="footer-socialLink twitter"></a>
+            <a href="https://plus.google.com/" class="footer-socialLink google"></a>
+            <a href="https://ru.pinterest.com/" class="footer-socialLink printerest"></a>
+        </div>
+        <a href="#" class="footer-term">Terms & Conditions  /  Privacy policy & Cookies</a>
+    </section>
+</footer>
 </body>
 </html>
