Добавлена страница contact us

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             </svg>
         </a>
         <nav class="menu">
-            <a href="#" class="menu-link">home</a>
+            <a href="index.html" class="menu-link">home</a>
             <a href="" class="menu-link">products</a>
             <a href="" class="menu-link">history</a>
             <a href="" class="menu-link">showroom</a>
-            <a href="" class="menu-link">contact</a>
+            <a href="contacts.html" class="menu-link">contact</a>
             <input type="search" name="" id="menu-search">
         </nav>
     </div>
