Выполнена страница Products

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </a>
         <nav class="menu">
             <a href="index.html" class="menu-link">home</a>
-            <a href="" class="menu-link">products</a>
+            <a href="products.html" class="menu-link">products</a>
             <a href="" class="menu-link">history</a>
             <a href="" class="menu-link">showroom</a>
             <a href="contacts.html" class="menu-link">contact</a>
@@ -45,7 +45,7 @@
             <a href="#" class="categorySwitcher-links">featured</a>
             <a href="#" class="categorySwitcher-links">new</a>
         </div>
-        <a href="#" class="exploreAll">explore all</a>
+        <a href="products.html" class="exploreAll">explore all</a>
         <div class="featured-products">
             <div class="featured-product">
                 <img class="featured-product-img" src="img/content/product-1.jpg" alt="ProductImg" width="270"
@@ -95,7 +95,7 @@
     </section>
     <section class="trending">
         <span class="trending-h">trending products</span>
-        <a href="#" class="exploreAll">explore all</a>
+        <a href="products.html" class="exploreAll">explore all</a>
         <div class="trending-container">
             <a href="#" class="trending-itm">
                 <img src="img/content/trending1.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
