--- a/products.html
+++ b/products.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contacts</title>
+    <title>Our Products Range</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -24,52 +24,88 @@
         </nav>
     </div>
     <div class="header-bot header-bot-contacts">
-        <h1 class="header-contacts-h1">contact us</h1>
+        <h1 class="header-contacts-h1">Our Products Range</h1>
     </div>
 </header>
-<main class="contacts-main">
-    <a href="#" class="contacts-adress-link">
-        <svg class="contacts-adress-link-svg" width="38" height="48" viewBox="0 0 533.333 533.333">
-            <path d="M266.666,0C174.618,0,100,74.619,100,166.667c0,166.667,166.667,366.667,166.667,366.667s166.667-200,166.667-366.667
-		C433.333,74.619,358.713,0,266.666,0z M266.666,266.667c-55.229,0-100-44.771-100-100c0-55.229,44.771-100,100-100
-		c55.229,0,100,44.771,100,100C366.666,221.896,321.895,266.667,266.666,266.667z"/>
-        </svg>
-        <span class="contacts-adress-link-h">california</span>
-        <span class="contacts-adress-link-category">phone:</span>
-        <span class="contacts-adress-link-data">1900-1234-5678</span>
-        <span class="contacts-adress-link-category">email:</span>
-        <span class="contacts-adress-link-data">info@interior.com</span>
-        <span class="contacts-adress-link-category">address:</span>
-        <span class="contacts-adress-link-street">12 W 1st St.90001 Los Angeles, California</span>
-    </a>
-    <a href="#" class="contacts-adress-link">
-        <svg class="contacts-adress-link-svg" width="38" height="48" viewBox="0 0 533.333 533.333">
-            <path d="M266.666,0C174.618,0,100,74.619,100,166.667c0,166.667,166.667,366.667,166.667,366.667s166.667-200,166.667-366.667
-		C433.333,74.619,358.713,0,266.666,0z M266.666,266.667c-55.229,0-100-44.771-100-100c0-55.229,44.771-100,100-100
-		c55.229,0,100,44.771,100,100C366.666,221.896,321.895,266.667,266.666,266.667z"/>
-        </svg>
-        <span class="contacts-adress-link-h">california</span>
-        <span class="contacts-adress-link-category">phone:</span>
-        <span class="contacts-adress-link-data">1900-1234-5678</span>
-        <span class="contacts-adress-link-category">email:</span>
-        <span class="contacts-adress-link-data">info@interior.com</span>
-        <span class="contacts-adress-link-category">address:</span>
-        <span class="contacts-adress-link-street">12 W 1st St.90001 Los Angeles, California</span>
-    </a>
-    <a href="#" class="contacts-adress-link">
-        <svg class="contacts-adress-link-svg" width="38" height="48" viewBox="0 0 533.333 533.333">
-            <path d="M266.666,0C174.618,0,100,74.619,100,166.667c0,166.667,166.667,366.667,166.667,366.667s166.667-200,166.667-366.667
-		C433.333,74.619,358.713,0,266.666,0z M266.666,266.667c-55.229,0-100-44.771-100-100c0-55.229,44.771-100,100-100
-		c55.229,0,100,44.771,100,100C366.666,221.896,321.895,266.667,266.666,266.667z"/>
-        </svg>
-        <span class="contacts-adress-link-h">california</span>
-        <span class="contacts-adress-link-category">phone:</span>
-        <span class="contacts-adress-link-data">1900-1234-5678</span>
-        <span class="contacts-adress-link-category">email:</span>
-        <span class="contacts-adress-link-data">info@interior.com</span>
-        <span class="contacts-adress-link-category">address:</span>
-        <span class="contacts-adress-link-street">12 W 1st St.90001 Los Angeles, California</span>
-    </a>
+<main class="main-container">
+    <section class="featured products-products">
+        <div class="categorySwitcher productsCategorySwitcher">
+            <a href="#" class="categorySwitcher-links productsCategorySwitcher-link">all</a>
+            <a href="#" class="categorySwitcher-links productsCategorySwitcher-link">home</a>
+            <a href="#" class="categorySwitcher-links productsCategorySwitcher-link">office</a>
+            <a href="#" class="categorySwitcher-links productsCategorySwitcher-link">furniture</a>
+            <a href="#" class="categorySwitcher-links productsCategorySwitcher-link">modern</a>
+            <a href="#" class="categorySwitcher-links productsCategorySwitcher-link">classic</a>
+        </div>
+        <div class="trending-container">
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending1.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending2.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending3.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending4.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending5.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending6.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending1.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending2.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending3.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending4.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending5.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending6.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
+        </div>
+        <input type="checkbox" id="refresh-btn-activator">
+        <label for="refresh-btn-activator" class="refresh-btn"></label>
+    </section>
+    <section class="exclusive">
+        <div class="exclusive-itm">
+            <span class="exclusive-itm-ticket">exclusive</span>
+            <span class="exclusive-itm-h">fishnet chair</span>
+            <p class="exclusive-itm-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
+                matt powder-coated black or highly polished chrome.</p>
+            <a href="#" class="order-btn">order us</a>
+        </div>
+        <div class="exclusive-itm">
+            <span class="exclusive-itm-ticket">exclusive</span>
+            <span class="exclusive-itm-h">fishnet chair</span>
+            <p class="exclusive-itm-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
+                matt powder-coated black or highly polished chrome.</p>
+            <a href="#" class="order-btn">order us</a>
+        </div>
+    </section>
 </main>
 <footer class="main-footer">
     <section class="footer-top">
